--- a/parents_app/parents_app/.vscode/settings.json
+++ b/parents_app/parents_app/.vscode/settings.json
@@ -7,7 +7,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    // "**/android": true,
+    "**/android": true,
     "**/ios": true,
     "**/build": true,
     "**/linux": true,
