--- a/parents_backend_node/package.json
+++ b/parents_backend_node/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon parents.js"
   },
   "author": "",
+  "editor.formatOnSave": true,
   "license": "ISC",
   "dependencies": {
     "16": "^0.0.2",
