--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
 "java.configuration.updateBuildConfiguration": "automatic",
 "files.exclude": {
     "**/.git": true,
-    // "**/parents_app": true,
+    "**/parents_app": true,
+    "**/AMA_django": true,
     "**/TeenCareJr.": true,
     "**/brave-drummer-350514-8c7aac941fa6.json": true,
     "**/node_modules": true,
