--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "**/TeenCareJr.": true,
     "**/brave-drummer-350514-8c7aac941fa6.json": true,
     "**/node_modules": true,
-    "**/*package*json": true,
+    // "**/*package*json": true,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
