--- a/server_node/package.json
+++ b/server_node/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^8.8.0",
     "googleapis": "^118.0.0",
     "googleapis-common": "^6.0.4",
+    "moment-timezone": "0.5.44",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
