--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TeenCareWeb"]
 	path = TeenCareWeb
-	url = git@github.com:gbgamzy/TeenCareWeb.gitcd ..
+	url = git@github.com:gbgamzy/TeenCareWeb.git
