--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,40 +1,40 @@
 {
 "java.configuration.updateBuildConfiguration": "automatic",
 "files.exclude": {
-    "**/parents_app": true,
-    "**/.git": true,
-    "**/AMA_django": true,
-    "**/TeenCareJr.": true,
-    "**/brave-drummer-350514-8c7aac941fa6.json": true,
-    "**/node_modules": true,
-    // "**/*package*json": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "**/android": true,
-    "**/ios": true,
-    // "**/build": true,
-    "**/linux": true,
-    "**/macos": true,
-    "**/test": true,
-    // "**/web": true,
-    "**/windows": true,
-    "**/.dart_tool": true,
-    "**/.idea": true,
-    // "**/.vscode": true,
-    "**/lib/firebase_options.dart": true,
-    "**/.flutter-plugins": true,
-    "**/.flutter-plugins-dependencies": true,
-    "**/.metadata": true,
-    "**/analysis_options.yaml": true,
-    "**/parents_app.iml": true,
-    // "**/pubspec.lock": true,
-    "**/README.md": true,
-    "**/doctor_application.iml": true,
-    "**/pubspec.lock": true,
-    "**/lib/generated_plugin_registrant.dart": true
+    // "**/parents_app": true,
+    // "**/.git": true,
+    // "**/AMA_django": true,
+    // "**/TeenCareJr.": true,
+    // "**/brave-drummer-350514-8c7aac941fa6.json": true,
+    // "**/node_modules": true,
+    // // "**/*package*json": true,
+    // "**/.svn": true,
+    // "**/.hg": true,
+    // "**/CVS": true,
+    // "**/.DS_Store": true,
+    // "**/Thumbs.db": true,
+    // // "**/android": true,
+    // "**/ios": true,
+    // // "**/build": true,
+    // "**/linux": true,
+    // "**/macos": true,
+    // "**/test": true,
+    // // "**/web": true,
+    // "**/windows": true,
+    // "**/.dart_tool": true,
+    // "**/.idea": true,
+    // // "**/.vscode": true,
+    // "**/lib/firebase_options.dart": true,
+    // "**/.flutter-plugins": true,
+    // "**/.flutter-plugins-dependencies": true,
+    // "**/.metadata": true,
+    // "**/analysis_options.yaml": true,
+    // "**/parents_app.iml": true,
+    // // "**/pubspec.lock": true,
+    // // "**/README.md": true,
+    // // "**/doctor_application.iml": true,
+    // // "**/pubspec.lock": true,
+    
 
 },
 "launch": {
