Otp service added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
 "java.configuration.updateBuildConfiguration": "automatic",
 "files.exclude": {
-    // "**/parents_app": true,
-    // "**/.git": true,
-    // "**/AMA_django": true,
+    "**/AMA_django": true,
     // "**/TeenCareJr.": true,
-    // "**/brave-drummer-350514-8c7aac941fa6.json": true,
-    // "**/node_modules": true,
-    // // "**/*package*json": true,
+    "**/TeenCareWeb": true,
+    "**/parents_app": true,
+    // "**/.git": true,
+    "**/.gitignore": true,
+    "**/.gitmodules": true,
+    "**/brave-drummer-350514-8c7aac941fa6.json": true,
+    "**/node_modules": true,
+    "**/deploy.sh": true,
+    "**/run.sh": true,
+    "**/jsconfig.json": true,
+    "**/package-lock.json": true,
     // "**/.svn": true,
     // "**/.hg": true,
     // "**/CVS": true,
