--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        {
+        {   
+            
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Server Node",
             "skipFiles": [
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/server_node/parents.js",
-            // "restart": true,
-            // "runtimeExecutable": "nodemon"
+            "cwd": "${workspaceFolder}/server_node",
+            "restart": true,
         }
     ]
 }
