--- a/server_node/package.json
+++ b/server_node/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "nvm": "^0.0.4"
+    "nvm": "^0.0.4",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "prettier": "^3.1.1"
