--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,17 @@
 "java.configuration.updateBuildConfiguration": "automatic",
 "files.exclude": {
     "**/AMA_django": true,
+    "**/server_node": true,
     // "**/TeenCareJr.": true,
-    "**/TeenCareWeb": true,
+    // "**/TeenCareWeb": true,
     "**/parents_app": true,
-    // "**/.git": true,
-    "**/.gitignore": true,
-    "**/.gitmodules": true,
+    // "**/.git*": true,
+    // "**/.gitignore": true,
+    // "**/.gitmodules": true,
     "**/brave-drummer-350514-8c7aac941fa6.json": true,
     "**/node_modules": true,
-    "**/deploy.sh": true,
-    "**/run.sh": true,
+    // "**/deploy.sh": true,
+    // "**/run.sh": true,
     "**/jsconfig.json": true,
     "**/package-lock.json": true,
     // "**/.svn": true,
@@ -21,25 +22,23 @@
     // "**/Thumbs.db": true,
     // // "**/android": true,
     // "**/ios": true,
-    // // "**/build": true,
-    // "**/linux": true,
-    // "**/macos": true,
-    // "**/test": true,
+    "**/build": true,
+    "**/linux": true,
+    "**/macos": true,
+    "**/test": true,
     // // "**/web": true,
     // "**/windows": true,
-    // "**/.dart_tool": true,
+    "**/.dart_tool": true,
     // "**/.idea": true,
     // // "**/.vscode": true,
     // "**/lib/firebase_options.dart": true,
-    // "**/.flutter-plugins": true,
-    // "**/.flutter-plugins-dependencies": true,
+    "**/.flutter-plugins": true,
+    "**/.flutter-plugins-dependencies": true,
     // "**/.metadata": true,
-    // "**/analysis_options.yaml": true,
-    // "**/parents_app.iml": true,
-    // // "**/pubspec.lock": true,
+    "**/analysis_options.yaml": true,
+    "*.iml": true,
     // // "**/README.md": true,
-    // // "**/doctor_application.iml": true,
-    // // "**/pubspec.lock": true,
+    "**/pubspec.lock": true,
     
 
 },
