--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,41 +2,41 @@
 "java.configuration.updateBuildConfiguration": "automatic",
 "files.exclude": {
     "**/AMA_django": true,
-    "**/server_node": true,
+    // "**/server_node": true,
     // "**/TeenCareJr.": true,
-    // "**/TeenCareWeb": true,
-    "**/parents_app": true,
+    "**/TeenCareWeb": true,
+    // "**/parentsApp": true,
+
     // "**/.git*": true,
     // "**/.gitignore": true,
     // "**/.gitmodules": true,
+
     "**/brave-drummer-350514-8c7aac941fa6.json": true,
     "**/node_modules": true,
-    // "**/deploy.sh": true,
-    // "**/run.sh": true,
+    // "**/*.sh": true,
     "**/jsconfig.json": true,
     "**/package-lock.json": true,
-    // "**/.svn": true,
-    // "**/.hg": true,
-    // "**/CVS": true,
-    // "**/.DS_Store": true,
-    // "**/Thumbs.db": true,
-    // // "**/android": true,
-    // "**/ios": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/android": true,
+    "**/ios": true,
     "**/build": true,
     "**/linux": true,
     "**/macos": true,
     "**/test": true,
-    // // "**/web": true,
-    // "**/windows": true,
+    // "**/web": true,
+    "**/windows": true,
     "**/.dart_tool": true,
-    // "**/.idea": true,
+    "**/.idea": true,
     // // "**/.vscode": true,
-    // "**/lib/firebase_options.dart": true,
     "**/.flutter-plugins": true,
     "**/.flutter-plugins-dependencies": true,
     // "**/.metadata": true,
     "**/analysis_options.yaml": true,
-    "*.iml": true,
+    "**/*.iml": true,
     // // "**/README.md": true,
     "**/pubspec.lock": true,
     
