--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,13 @@
             "name": "TeenCareWeb",
             "program": "${workspaceFolder}/TeenCareWeb",
             "cwd": "${workspaceFolder}/TeenCareWeb",
+        },
+        {
+            "type": "dart",
+            "request": "launch",
+            "name": "ParentsApp",
+            "program": "${workspaceFolder}/parentsApp/lib/main.dart",
+            "cwd": "${workspaceFolder}/parentsApp",
         }
     ]
 }
