--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,10 @@
 [submodule "parentsApp"]
 	path = parentsApp
 	url = git@github.com:gapsco/ParentsApp.git
+# [submodule "JrTeenCare"]
+# 	path = 'JrTeenCare'
+# 	url = git@github.com:gbgamzy/teencarejr.git
+
+[submodule "server_node/JrTeenCare"]
+	path = server_node/JrTeenCare
+	url = git@github.com:gbgamzy/teencarejr.git
