--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             ],
             "program": "${workspaceFolder}/server_node/parents.js",
             "cwd": "${workspaceFolder}/server_node",
-            "restart": true,
+            // "restart": true,
         },
         {
             "type": "dart",
