--- a/server_node/package.json
+++ b/server_node/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/pubsub": "^3.4.1",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
@@ -28,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "nvm": "^0.0.4",
+    "razorpay": "^2.9.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
