--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,8 @@
     "**/brave-drummer-350514-8c7aac941fa6.json": true,
     "**/node_modules": true,
     // "**/*.sh": true,
-    "**/jsconfig.json": true,
-    "**/package*.json": true,
+    // "**/jsconfig.json": true,
+    // "**/package*.json": true,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
